--- a/FrontEnd/templates/index.html
+++ b/FrontEnd/templates/index.html
@@ -240,9 +240,9 @@ body img{
 				<div class="col-lg-4 col-md-6 text-center">
 					<div class="single-product-item">
 						<div class="product-image">
-							<a><img src="{% static 'img/Games/game1.png' %}" alt=""></a>
+							<a><img src="" alt="" class="imgs"></a>
 						</div>
-						<h3>Lorem ipsum</h3>
+						<h3 class="names" ></h3>
 					
 						
 					</div>
@@ -250,9 +250,9 @@ body img{
 				<div class="col-lg-4 col-md-6 text-center">
 					<div class="single-product-item">
 						<div class="product-image">
-							<a><img src="{% static 'img/Games/game2.png' %}" alt=""></a>
+							<a><img src="" alt="" class="imgs"></a>
 						</div>
-						<h3>Lorem ipsum</h3>
+						<h3 class="names"></h3>
 						
 						
 					</div>
@@ -260,9 +260,9 @@ body img{
 				<div class="col-lg-4 col-md-6 offset-md-3 offset-lg-0 text-center">
 					<div class="single-product-item">
 						<div class="product-image">
-							<a><img src="{% static 'img/Games/game3.png' %}" alt=""></a>
+							<a><img src="" alt="" class="imgs"></a>
 						</div>
-						<h3>Lorem ipsum</h3>
+						<h3 class="names" ></h3>
 						
 						
 					</div>
@@ -270,6 +270,63 @@ body img{
 			</div>
 		</div>
 	</div>
+	<script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+	<script>
+		$(document).ready(function () {
+console.log("Document is ready.");
+    // Function to fetch and display random high-rated games
+    function fetchRandomGames() {
+        var url = '/BackEnd/retrieve_random_high_rated_games/';
+
+        $.ajax({
+            url: url,
+            method: 'GET',
+            dataType: 'json',
+            success: function (data) {
+                console.log('Received data:', data);
+
+                if (data && data.random_high_rated_games_data) {
+                    displayGames(data.random_high_rated_games_data);
+                } else {
+                    console.error('Data format is not as expected:', data);
+                }
+            },
+            error: function (xhr, textStatus, errorThrown) {
+
+            }
+        });
+    }
+
+    // Function to dynamically update the HTML with game data
+  function displayGames(games) {
+  console.log(games)
+    for (var i = 0; i < 3; i++) {
+        var game = games[i];
+
+        // Select elements by class
+        var imageElement = document.getElementsByClassName('imgs')[i];
+        var nameElement = document.getElementsByClassName('names')[i];
+
+
+
+        // Update element content
+        imageElement.src = game.Icon_URL;
+        nameElement.textContent = game.Name;
+
+
+
+
+
+
+    }
+
+}
+
+    // Fetch random games when the page loads
+    fetchRandomGames();
+    console.log("fetchRandomGames function called.");
+});
+	</script>
 	<!-- end product section -->
 
 	<!-- cart banner section -->
