--- a/FrontEnd/templates/Games.html
+++ b/FrontEnd/templates/Games.html
@@ -365,7 +365,7 @@
 			  <option>Highest Rating</option>
 			  <option>Lowest Rating</option>
 			  <option>Largest Size</option>
-			  <option>Samllest Size</option>
+			  <option>Smallest Size</option>
 
 			</select>
 			<!-- End Select -->
