--- a/FrontEnd/templates/Games.html
+++ b/FrontEnd/templates/Games.html
@@ -247,6 +247,12 @@
     background-color: transparent;
     border: solid transparent;
 }
+			.site-logo img{
+  width: 200px;
+    height: 100px;
+	position: relative;
+	left: -25px;
+}
 
     </style>
 
