--- a/FrontEnd/templates/History.html
+++ b/FrontEnd/templates/History.html
@@ -65,6 +65,9 @@
         background-clip: text;
         -webkit-background-clip: text;
 }
+		.container {
+		height:100%;}
+
 
 	</style>
 </head>
@@ -155,17 +158,19 @@
 						</p>
 					</div>
 				</div>
-				<ul class="Realbreadcrumb">
-					{% breadcrumb %}
-					<li class="breadcrumb-item current"><a href="{% url 'History' %}">Downloaded Games</a></li>
-				</ul>
+					<ul class="Realbreadcrumb">
+
+					<li class="breadcrumb-item"><a href="{% url 'index' %}" >Home</a></li>
+					<li class="breadcrumb-item current"><a href="{% url 'History' %}" >Downloaded Games</a></li>
+
+				  </ul>
 			</div>
 		</div>
 	</div>
 	<!-- end breadcrumb section -->
 
 	<!-- games -->
-	<div class="product-section mt-150 mb-150">
+	<div class="product-section mt-150 mb-150" style="height:70%">
 		<div class="container">
 
 			<div class="row">
@@ -174,15 +179,15 @@
                 </div>
             </div>
 
-			<div class="row product-lists">
+			<div class="row product-lists" style="height:auto;">
 				<div class="col-lg-4 col-md-6 text-center strawberry">
 					<div class="single-product-item">
 						<div class="product-image">
-							<a href="{% url 'game_info_page' %}?img=1"><img src="{% static 'img/Games/game1.png' %}" alt=""></a>
+							<a href="" class="urls"><img src="" alt="" class="imgs"></a>
 						</div>
-						<h3>Lorem ipsum</h3>
+						<h3 class="names"></h3>
 						
-						<a href="{% url 'game_info_page' %}?img=1" class="cart-btn">More info</a>
+						<a href="" class="cart-btn ids" onclick="info(event)" >More info</a>
 						<br>
 						<div style="display: flex; align-items: center;">
 							<h6 style="margin-left: 55px; margin-top: 20px; font-size: 15px">Downloaded Date: 10/12/2023</h6>
@@ -192,11 +197,11 @@
 				<div class="col-lg-4 col-md-6 text-center berry">
 					<div class="single-product-item">
 						<div class="product-image">
-							<a href="{% url 'game_info_page' %}?img=6"><img src="{% static 'img/Games/game6.png' %}" alt=""></a>
+							<a href="" class="urls"><img src="" alt="" class="imgs"></a>
 						</div>
-						<h3>Lorem ipsum</h3>
+						<h3 class ='names'></h3>
 						
-						<a href="{% url 'game_info_page' %}?img=6" class="cart-btn">More info</a>
+						<a href="" class="cart-btn ids" onclick="info(event)">More info</a>
 						<br>
 						<div style="display: flex; align-items: center;">
 							<h6 style="margin-left: 55px; margin-top: 20px; font-size: 15px">Downloaded Date: 08/12/2023</h6>
@@ -206,11 +211,11 @@
 				<div class="col-lg-4 col-md-6 text-center lemon">
 					<div class="single-product-item">
 						<div class="product-image">
-							<a href="{% url 'game_info_page' %}?img=3"><img src="{% static 'img/Games/game3.png' %}" alt=""></a>
+							<a href="" class="urls"><img src="" alt="" class="imgs"></a>
 						</div>
-						<h3>Lorem ipsum</h3>
+						<h3 class='names'></h3>
 						
-						<a href="{% url 'game_info_page' %}?img=3" class="cart-btn">More info</a>
+						<a href="" class="cart-btn ids" onclick="info(event)">More info</a>
 						<br>
 						<div style="display: flex; align-items: center;">
 							<h6 style="margin-left: 55px; margin-top: 20px; font-size: 15px">Downloaded Date: 08/12/2023</h6>
@@ -219,16 +224,15 @@
 				</div>
 			</div>
 
+
+
 			<div class="row">
 				<div class="col-lg-12 text-center">
 					<div class="pagination-wrap">
 						<ul>
-							<li><a href="#">Prev</a></li>
-							<li><a class="active" href="#">1</a></li>
-							<li><a href="#">2</a></li>
-							<li><a href="#">3</a></li>
-							<li><a href="#">Next</a></li>
+
 						</ul>
+
 					</div>
 				</div>
 			</div>
@@ -327,6 +331,96 @@
 	<script src="{% static '/js/jquery.sticker.js' %}"></script>
 	<!-- main js -->
 	<script src="{% static '/js/main.js' %}"></script>
+	<script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+<script>
+$(document).ready(function () {
+console.log("Document is ready.");
+    // Function to fetch and display random high-rated games
+    function fetchRandomGames() {
+        var url = '/BackEnd/retrieve_random_high_rated_games/';
+
+        $.ajax({
+            url: url,
+            method: 'GET',
+            dataType: 'json',
+            success: function (data) {
+                console.log('Received data:', data);
+
+                if (data && data.random_high_rated_games_data) {
+                    displayGames(data.random_high_rated_games_data);
+                } else {
+                    console.error('Data format is not as expected:', data);
+                }
+            },
+            error: function (xhr, textStatus, errorThrown) {
+            console.log("error")
+
+            }
+        });
+    }
+
+    // Function to dynamically update the HTML with game data
+   function displayGames(games) {
+        console.log(games);
+           var imageElements = document.querySelectorAll('.imgs');
+        var nameElements = document.querySelectorAll('.names');
+        var idElements = document.querySelectorAll('.ids');
+        var urlElements = document.querySelectorAll('.urls');
+
+
+       for (var j = 0, i = 6; i < 9 && i < games.length; i++, j++) {
+         var game = games[i];
+
+        // Select elements by class
+        var imageElement = imageElements[j];
+       var nameElement = nameElements[j];
+       var idElement =idElements[j];
+       urlElement=urlElements[j]
+;
+
+
+       idElement=idElements[j];
+       idElement.setAttribute('data-game-id', game.ID);
+
+        console.log(idElement.getAttribute('data-game-id'));
+
+    imageElement.src=game.Icon_URL;
+    nameElement.innerHTML=game.Name;
+    urlElement.href=game.URL;
+
+
+
+
+
+}
+    }
+
+    // Fetch random games when the page loads
+    fetchRandomGames();
+    console.log("fetchRandomGames function called.");
+});
+</script>
+<script>
+    function info(event) {
+        event.preventDefault(); // Prevent the default link behavior
+
+        // Get the clicked element
+        var clickedElement = event.target;
+
+        // Example: Get the value of the "data-game-id" attribute
+        var gameNewID = clickedElement.getAttribute('data-game-id');
+
+        // Use the attribute value as needed
+        console.log('Clicked Game ID:', gameNewID);
+
+        // Modify the URL
+        var newURL = `/game_info_page/${gameNewID}/`;
+        console.log('New URL:', newURL);
+
+        // Replace the current URL with the new one and trigger a reload
+        window.location.replace(newURL);
+    }
+</script>
 
 </body>
 {% endblock %}
